3.3.4/_sources/gallery/subplots_axes_and_figures/subplot_demo.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/subplots_axes_and_figures/subplot_demo.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_subplots_axes_and_figures_subplot_demo.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_subplots_axes_and_figures_subplot_demo.py:


==================
Basic Subplot Demo
==================

Demo with two subplots.
For more options, see
:doc:`/gallery/subplots_axes_and_figures/subplots_demo`

.. GENERATED FROM PYTHON SOURCE LINES 10-29



.. image:: /gallery/subplots_axes_and_figures/images/sphx_glr_subplot_demo_001.png
    :alt: A tale of 2 subplots
    :class: sphx-glr-single-img





.. code-block:: default

    import numpy as np
    import matplotlib.pyplot as plt

    # Data for plotting
    x1 = np.linspace(0.0, 5.0)
    x2 = np.linspace(0.0, 2.0)
    y1 = np.cos(2 * np.pi * x1) * np.exp(-x1)
    y2 = np.cos(2 * np.pi * x2)

    # Create two subplots sharing y axis
    fig, (ax1, ax2) = plt.subplots(2, sharey=True)

    ax1.plot(x1, y1, 'ko-')
    ax1.set(title='A tale of 2 subplots', ylabel='Damped oscillation')

    ax2.plot(x2, y2, 'r.-')
    ax2.set(xlabel='time (s)', ylabel='Undamped')

    plt.show()


.. _sphx_glr_download_gallery_subplots_axes_and_figures_subplot_demo.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: subplot_demo.py <subplot_demo.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: subplot_demo.ipynb <subplot_demo.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
